@@ -1459,6 +1459,7 @@ MODULE ALL_VARS
    REAL(SP), ALLOCATABLE,TARGET :: WVSURF(:)        !!SURFACE FRICTION FOR INT
    REAL(SP), ALLOCATABLE,TARGET :: WUSURF_save(:)   !!SURFACE FRICTION FOR INT
    REAL(SP), ALLOCATABLE,TARGET :: WVSURF_save(:)   !!SURFACE FRICTION FOR INT
+   REAL(SP), ALLOCATABLE,TARGET :: CICE_TEST(:)     !!INPUT ICE CONCENTRARION
    ! BFWDIS - UNITS: m3s-1 Cubic meters per second
    REAL(SP), ALLOCATABLE,TARGET :: BFWDIS(:)        !!GROUNDWATER FLUX AT CURRENT TIME
 !# if !defined (SEMI_IMPLICIT)
@@ -1475,6 +1476,7 @@ MODULE ALL_VARS
    REAL(SP), ALLOCATABLE,TARGET :: ICING_0kts(:)
    REAL(SP), ALLOCATABLE,TARGET :: ICING_10kts(:)
 
+   ! NOT SURE WHETHER RIVER STUFF BELONGS HERE OR IN ALL_VARS???
 
    ! RIVER STUFF
    INTEGER,  ALLOCATABLE,TARGET :: INODEQ(:)        !!LOCAL FRESH WATER INFLOW NODES
