@@ -147,3 +147,6 @@ coare26z.F, coare40vn.F, mod_force.F
 
 Add bottom roughness types
 brough.F, mod_input.F, mod_main.F, mod_setup.F
+
+add wave speed
+internal_step.F
